# simovel

./: .gitignore  .sim-caixa-versao  README  exc.py  main.py  pyproject.toml
bkp/: exc.py  sim.py  util.py
bkp/config/: integracao.py
bkp/rest_api/: sim.db
bkp/server/: instance.py
bkp/sims/: base.py  bradesco.py  caixa.py  itau.py
config/: integracao.py
install/: instalar-servico.sh
rest_api/: api_multi360.py  api_v1.py  app.py
rest_api/apis/: ns_multi360.py
rest_api/migrations/versions/: cdc4124d4ad1_itaú_e_santander.py  fb470bee4a69_.py
rest_api/models/: simulacao.py
rest_api/schemas/: simulacao.py
sims/: caixa.py  santander.py
src/: requirements.txt  sim.py  util.py
src/config/: geral.py  layout.py
src/rest_api/: app.py  app_factory.py  bootstrap.py  db.py  main.py  sim.db  ufs.csv
src/rest_api/apis/: ns_multi360.py  ns_v1.py
src/rest_api/legacy/: api_multi360.py  api_v1.py  app.py  app_factory.py  ns_multi360.py  ns_v1.py
src/rest_api/models/: integracao.py  simulacao.py
src/simovel/: exceptions.py  util.py
src/simovel/cli/: caixa.py  db.py
src/simovel/config/: geral.py  layout.py
src/simovel/db/: bootstrap.py  paths.py  session.py  types.py
src/simovel/install/: servico-systemd.ini
src/sims/: base.py  bradesco.py  itau.py
tests/: Testes - Simulador Crédito Imobiliário Caixa.ipynb  resultado-caixa.html  sim-cef-manutencao.html  sim-cef.html  sim_term.py  sim_term_caixa.py  test_resultado_caixa.py  test_sim.ipynb  test_sim.py
tests/.ipynb_checkpoints/: Testes - Simulador Crédito Imobiliário Caixa-checkpoint.ipynb
(+10 files in other folders)
