[project]
name = "simovel"
version = "0.22.0"
description = "Simulador de Crédito Imobiliário"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core
    "sqlalchemy>=2.0,<3.0",
    "greenlet>=2.0",
    "click>=8.1",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "unidecode>=1.3",
    "ngram>=4.0",

    # API
    "fastapi>=0.110",
    "pydantic>=2.6",
    "uvicorn>=0.29",

    # Integrações
    "selenium>=4.32",
    "webdriver-manager>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
